--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
         <activity android:name="simplemusicuiux.musicapp.MusicPlayerActivity" />
         <activity android:name="simplemusicuiux.musicapp.MyMusicActivity" />
+        <service android:name=".service.MediaPlayerService" />
     </application>
 
 </manifest>
